Generate the general layout of the dashboard.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Babel with Gulp</title>
+  <title>Geotab BI</title>
+  <link rel="stylesheet" href="public/css/normalize.css" />
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700|Material+Icons' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="public/css/global.css" />
+  <link rel="stylesheet" href="public/css/dashboard.css" />
 </head>
 <body>
+  <div id="main"></div>
   <script src="public/js/bundle.js"></script>
 </body>
 </html>
